--- a/exercicios/d012/estilo/style.css
+++ b/exercicios/d012/estilo/style.css
@@ -58,21 +58,38 @@ section {
     font-size: 3.5vw;
 }
 
+section p {
+    padding: 2em;
+}
+
 section.normal {
-    background-color: rgb(224, 141, 141);
+    background-color: white);
     color: black;
 }
 
 section.imagem {
     background-color: rgb(139, 235, 131);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.293);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
