--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,4 +1,8 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 /* Portrait */
 
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
